--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tui = "0.13.0"
 blurz = "0.4.0"
