--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+termion = "1.5.5"
 tui = "0.13.0"
 blurz = "0.4.0"
