--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-termion = "1.5.5"
-tui = "0.13.0"
+crossterm = "0.18.2"
+tui = { version = "0.13.0", default-features = false, features = ['crossterm'] }
 blurz = "0.4.0"
 rand = "0.7"
